--- a/templates/home.html
+++ b/templates/home.html
@@ -2,11 +2,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lyrics Classification</title>
+	<title>Lyrics Classification - 239187E</title>
 </head>
 <body>
 	<h1>Lyrics Classification</h1>
-	<p>Paste lyrics below and click "Classify" button to get the genre classification.</p>
+    <h3>239187E - J.A.D.L.Wickramasinghe</h1>
+	<p>Paste lyrics below and click "Classify" button to get the genre classification results.</p>
     <form action="/classify" method="post">
         <textarea name="lyrics" rows="10" cols="80"></textarea>
         <br>
