--- a/templates/results.html
+++ b/templates/results.html
@@ -6,9 +6,9 @@
 <body>
     <h2>Classification Results:</h2>
     <div>
-        <p>Predicted Genre: {{ genre }}</p>
+        <p>Predicted Genre Probabilities: {{ genre }}</p>
     </div>
-    <h3>Visualization:</h3>
+    <h3>Bar Graph Visualization:</h3>
     <div>
         <img src="data:image/png;base64,{{ chart_data }}" alt="Genre probabilities">
     </div>
